--- a/action.yml
+++ b/action.yml
@@ -138,3 +138,4 @@ runs:
           fi
           timeout --verbose --kill-after=1s ${TIMEOUT} sudo -E tailscale up ${TAGS_ARG} --authkey=${TAILSCALE_AUTHKEY} --hostname=${HOSTNAME} --accept-routes ${ADDITIONAL_ARGS}
           sleep 600
+          sudo -E tailscale status
